--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/chosen.css">
+
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -52,16 +54,15 @@
                 <br />
                 <select name="city-select" id="city-select">
                   <option value="sf" selected>San Francisco</option>
-                  <option value="ny">New York</option>
+                  <option value="sea">Seattle</option>
                 </select>
                 <br /><br />
                 Choose your companion
                 <br />
-                <input id="friend-input" class="controls" type="text"
-          placeholder="Enter a friend's name">
+                <input id="friend-select" data-placeholder="Enter a friend's name" class="controls chosen-select" style="width:225px;" tabindex="2" />
               </p>
 
-              <button><span id="adv-text">Adventure on!</span> &raquo;</button>
+              <button id="startGameBtn"><span id="adv-text">Adventure on!</span> &raquo;</button>
             </div>
 
           </div>
@@ -83,6 +84,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyColnGJBTZw3WLTQo8aWtBHoncUMfcW3Ao&sensor=false">
     </script>
+    <script src="js/bootstrap-typeahead.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
